--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
     <title>To-Do Application</title>
+    <link rel="icon" type="image/png" href="task.svg" />
   </head>
 
   <body>
