--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>To-Do List</h1>
-      <form class="form input-container">
+      <form class="form input-container" id="form">
         <input
           type="text"
           class="todo-input"
