no tasks added functionallity and alert updated

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         />
         <button type="submit" class="button add-todo" id="addTodo">Add</button>
       </form>
+      <div id="alert"></div>
       <ul id="todoList">
         <!-- Tasks will be added here dynamically -->
         <!-- <li>
