input error border added

--- a/index.html
+++ b/index.html
@@ -20,17 +20,7 @@
         <button type="submit" class="button add-todo" id="addTodo">Add</button>
       </form>
       <div id="alert"></div>
-      <ul id="todoList">
-        <!-- Tasks will be added here dynamically -->
-        <!-- <li>
-          <input type="checkbox" hidden id="1" />
-          <label for="1">My firs todo</label>
-          <div class="buttons">
-            <button class="button edit-button">Edit</button>
-            <button class="button delete-button">Delete</button>
-          </div>
-        </li> -->
-      </ul>
+      <ul id="todoList"></ul>
       <div class="all-checked-container">
         <input type="checkbox" id="allChecked" />
         <label for="allChecked">Mark all as done</label>
